--- a/style.css
+++ b/style.css
@@ -54,3 +54,19 @@ header {
 .center-nav ul li a:hover {
     color: #007bff;
 }
+
+
+/* SMW Bigfont */
+@font-face {
+    font-family: 'SMW Superbig';
+    src: url('super-mario-world-superbig.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+.left-text p {
+    font-family: 'SMW Superbig', Arial, sans-serif; /* Apply the custom font */
+    margin: 0;
+    font-weight: normal;
+    font-size: 24px; /* Adjust font size as needed */
+}
