--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ header {
 }
 
 .left-text p {
-    font-family: 'SMW Superbig', Arial, sans-serif; /* Apply the custom font */
+    font-family: 'SMW Superbig', sans-serif; /* Apply the custom font */
     margin: 0;
     font-weight: normal;
     font-size: 24px; /* Adjust font size as needed */
