--- a/style.css
+++ b/style.css
@@ -88,3 +88,10 @@ header {
     font-size: 24px; /* Adjust font size as needed */
 }
 
+.center-nav p {
+    font-family: 'Unbounded', sans-serif; /* Apply the custom font */
+    margin: 0;
+    font-weight: normal;
+    font-size: 24px; /* Adjust font size as needed */
+}
+
