--- a/style.css
+++ b/style.css
@@ -88,10 +88,14 @@ header {
     font-size: 24px; /* Adjust font size as needed */
 }
 
-.center-nav p {
-    font-family: 'Unbounded', sans-serif; /* Apply the custom font */
-    margin: 0;
-    font-weight: normal;
-    font-size: 24px; /* Adjust font size as needed */
+.center-nav ul li a {
+    font-family: 'Unbounded', sans-serif; /* Apply the new font */
+    text-decoration: none;
+    color: #333;
+    font-weight: bold;
+}
+
+.center-nav ul li a:hover {
+    color: #007bff;
 }
 
