--- a/style.css
+++ b/style.css
@@ -66,14 +66,14 @@ header {
 
 @font-face {
     font-family: 'Unbounded';
-    src: url('/fonts/Unbounded-VariableFont_wght.woff') format('woff');
+    src: url('/fonts/Unbounded.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Gabarito';
-    src: url('/fonts/Gabarito-VariableFont_wght.woff') format('woff');
+    src: url('/fonts/Gabarito.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
@@ -92,7 +92,7 @@ header {
     font-family: 'Unbounded', sans-serif; /* Apply the new font */
     text-decoration: none;
     color: #333;
-    font-weight: bold;
+    font-weight: normal;
 }
 
 .center-nav ul li a:hover {
