--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ header {
     font-weight: bold;
     font-family: 'SMW Superbig', sans-serif;
     font-size: 24px;
+    font-color: #fff
 }
 
 /* Center the navigation links horizontally */
