--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ body::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('path/to/your/image.jpg') no-repeat center center fixed;
+    background: url('/assets/websitethumbnail_v1.png') no-repeat center center fixed;
     background-size: cover;
     z-index: -1;
 }
