--- a/style.css
+++ b/style.css
@@ -22,10 +22,6 @@ header {
     padding: 0 20px;
 }
 
-.left-text {
-    /* Adjust width if needed */
-}
-
 .left-text p {
     margin: 0;
     font-family: 'SMW Superbig', sans-serif;
@@ -121,6 +117,6 @@ body::after {
     transform: translate(-50%, -50%);
     text-align: center;
     font-size: 48px; /* Adjust size as needed */
-    font-family: 'SMW Superbig', sans-serif;
+    font-family: 'SMW Superbig', sans-serif !important;
     color: #fff;
 }
