--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -1,29 +1,49 @@
----
-# This is the layout for the blog page.
----
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="{{ '/assets/style.css' | relative_url }}">
+    <link rel="stylesheet" href="/blog.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
-<body>
-    <header>
-        <h1>{{ site.title }}</h1>
-        <nav>
-            <a href="{{ site.baseurl }}/">Home</a>
-            <a href="{{ site.baseurl }}/blog/">Blog</a>
+<header>
+    <div class="container">
+        <div class="left-text menu-toggle" aria-label="Toggle menu">
+            <p>mariopuff</p>
+        </div>
+        <nav class="center-nav">
+            <ul class="nav-links">
+                <li><a href="/">Home</a></li>
+                <li><a href="/projects">Projects</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="/extras">Extras</a></li>
+            </ul>
         </nav>
-    </header>
-
+    </div>
+</header>
+<body>
+<h1 class="center-text">The Daily Submini</h1></div>
+<h2 class="center-desc">Mariopuff's blog, where news and updates alike appear here!</h2></div>
+<div class="dotted-divider"></div>
+    <!-- Main content -->
     <main>
         {{ content }}
     </main>
 
+    <!-- Footer -->
     <footer>
-        <p>&copy; {{ site.time | date: '%Y' }} {{ site.title }}</p>
+        <div class="footer-connections">
+            <a href="https://www.youtube.com/@mariopuff184"><img class="icon-large" src="/assets/yt-footer.svg" alt="icon"></a>
+            <a href="https://discord.com/users/832629415828914248"><img class="icon-large" src="/assets/dsc-footer.svg" alt="icon"></a>
+            <a href="https://open.spotify.com/user/xftko2c2nq2exfwg3tes82asl"><img class="icon-large" src="/assets/spotify-footer.svg" alt="icon"></a>
+            <a href="https://www.reddit.com/user/SJM184/"><img class="icon-large" src="/assets/reddit-footer.svg" alt="icon"></a>
+            <a href="https://twitch.tv/mariopuff"><img class="icon-large" src="/assets/twitch-footer.svg" alt="icon"></a>
+            <a href="https://steamcommunity.com/id/mariopuff/"><img class="icon-large" src="/assets/steam-footer.svg" alt="icon"></a>
+            <a href="https://x.com/toybunny_"><img class="icon-large" src="/assets/formerlytwitter-footer.svg" alt="icon"></a>
+            <a href="https://www.roblox.com/users/6220154646/profile"><img class="icon-large" src="/assets/roblox-footer.svg" alt="icon"></a>
+        </div>
+        <p>&copy; 2025 liminalchopsoups</p>
     </footer>
 </body>
 </html>
