--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -6,6 +6,7 @@
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="/blog.css">
     <link rel="stylesheet" href="/style.css">
+    <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
 </head>
 <header>
     <div class="container">
