--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -36,11 +36,11 @@
     <footer>
         <div class="footer-connections">
             <a href="https://www.youtube.com/@mariopuff184"><img class="icon-large" src="/assets/yt-footer.svg" alt="icon"></a>
-            <a href="https://discord.com/users/832629415828914248"><img class="icon-large" src="/assets/dsc-footer.svg" alt="icon"></a>
+            <a href="https://discord.com/users/913646560838041660"><img class="icon-large" src="/assets/dsc-footer.svg" alt="icon"></a>
             <a href="https://open.spotify.com/user/xftko2c2nq2exfwg3tes82asl"><img class="icon-large" src="/assets/spotify-footer.svg" alt="icon"></a>
             <a href="https://www.reddit.com/user/SJM184/"><img class="icon-large" src="/assets/reddit-footer.svg" alt="icon"></a>
             <a href="https://twitch.tv/mariopuff"><img class="icon-large" src="/assets/twitch-footer.svg" alt="icon"></a>
-            <a href="https://steamcommunity.com/id/mariopuff/"><img class="icon-large" src="/assets/steam-footer.svg" alt="icon"></a>
+            <a href="https://steamcommunity.com/id/hallwayheat/"><img class="icon-large" src="/assets/steam-footer.svg" alt="icon"></a>
             <a href="https://x.com/toybunny_"><img class="icon-large" src="/assets/formerlytwitter-footer.svg" alt="icon"></a>
             <a href="https://www.roblox.com/users/6220154646/profile"><img class="icon-large" src="/assets/roblox-footer.svg" alt="icon"></a>
         </div>
